[package]
name = "yew_vnode_struct"
version = "0.1.1"
description = "Utility for yew framework to get the complete structure of vnode"
authors = ["Francisco Jesus Navarro Cortes <spieljs@gmail.com>"]
edition = "2018"
license = "MIT"
categories = ["wasm", "development-tools::testing", "development-tools::cargo-plugins"]

[dependencies]
yew = { version = "0.14", features = ["toml", "yaml", "msgpack", "cbor", "web_sys"]}
web-sys = {version = "0.3.36", features = ["Node"]}
